added: scope.api to execute authentication endpoints wie access token
